# ibc-solo-machine

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  plan.md  sample.env
.github/workflows/: ci.yml  release.yml
event-hooks/stdout-logger/: Cargo.toml
event-hooks/stdout-logger/src/: lib.rs
ibc/: Cargo.toml  build.rs
ibc/src/: client.rs  core.rs  lib.rs  proto.rs
ibc/src/client/ics06_solo_machine/: header.rs
ibc/src/client/ics07_tendermint/: consensus_state.rs
ibc/src/core/: bit_array.rs  crypto.rs  ics02_client.rs  ics03_connection.rs  ics04_channel.rs  ics07_tendermint.rs  ics23_vector_commitments.rs
ibc/src/core/crypto/: ed25519.rs  multisig.rs
ibc/src/core/ics02_client/: client_type.rs  height.rs  msg_create_client.rs  msg_update_client.rs
ibc/src/core/ics04_channel/: msg_acknowledgement.rs  packet.rs
ibc/src/core/ics06_solo_machine/: client_state.rs  consensus_state.rs
ibc/src/core/ics07_tendermint/: client_state.rs  consensus_state.rs  header.rs
ibc/src/core/ics24_host/: identifier.rs  path.rs
signers/mnemonic-signer/: Cargo.toml
signers/mnemonic-signer/src/: lib.rs
solo-machine/: Cargo.toml  build.rs
solo-machine-cli/: Cargo.toml
solo-machine-cli/src/: command.rs
solo-machine-cli/src/command/: bank.rs  chain.rs  ibc.rs
solo-machine-core/: Cargo.toml  build.rs
solo-machine-core/migrations/: 20210628095740_accounts.up.sql  20210629014337_account_operations.down.sql  20210629014337_account_operations.up.sql  20210629014337_operations.up.sql  20210629041402_chains.down.sql  20210629041402_chains.up.sql  20210717070615_chain_keys.up.sql
solo-machine-core/postgres-migrations/: 20210629014337_operations.down.sql  20210629014337_operations.up.sql  20210629041402_chains.up.sql  20210629091441_ibc_data.down.sql  20210629091441_ibc_data.up.sql  20210717070615_chain_keys.down.sql  20210717070615_chain_keys.up.sql
solo-machine-core/proto/cosmos/auth/v1beta1/: auth.proto
solo-machine-core/proto/cosmos/crypto/ed25519/: keys.proto
solo-machine-core/proto/cosmos/crypto/multisig/: keys.proto
solo-machine-core/proto/cosmos/crypto/multisig/v1beta1/: multisig.proto
solo-machine-core/proto/cosmos/crypto/secp256k1/: keys.proto
solo-machine-core/proto/cosmos/crypto/secp256r1/: keys.proto
solo-machine-core/proto/cosmos_proto/: cosmos.proto
solo-machine-core/proto/ethermint/crypto/v1/ethsecp256k1/: keys.proto
solo-machine-core/proto/ethermint/crypto/v1alpha1/ethsecp256k1/: keys.proto
solo-machine-core/proto/ethermint/types/v1/: account.proto
solo-machine-core/proto/ethermint/types/v1alpha1/: account.proto
solo-machine-core/proto/gogoproto/: gogo.proto
solo-machine-core/proto/google/protobuf/: any.proto
solo-machine-core/proto/ibc/core/channel/v1/: channel.proto
solo-machine-core/proto/ibc/core/connection/v1/: connection.proto
solo-machine-core/proto/ibc/lightclients/solomachine/v2/: solomachine.proto
solo-machine-core/sqlite-migrations/: 20210629014337_operations.up.sql  20210629041402_chains.up.sql  20210717070615_chain_keys.up.sql
solo-machine-core/src/: cosmos.rs  event.rs  ibc.rs  lib.rs  model.rs  proto.rs  service.rs  signer.rs  transaction_builder.rs
solo-machine-core/src/cosmos/: account.rs  bit_array.rs  crypto.rs
solo-machine-core/src/cosmos/account/: base_account.rs  eth_account.rs
solo-machine-core/src/cosmos/crypto/: ed25519.rs  eth_secp256k1.rs  multisig.rs  secp256k1.rs
solo-machine-core/src/event/: event_handler.rs
solo-machine-core/src/ibc/: core.rs
solo-machine-core/src/ibc/apps/: transfer.rs
solo-machine-core/src/ibc/apps/transfer/: msg_transfer.rs
solo-machine-core/src/ibc/client/: ics06_solo_machine.rs
solo-machine-core/src/ibc/client/ics06_solo_machine/: client_state.rs  consensus_state.rs  header.rs
solo-machine-core/src/ibc/client/ics06_solo_machine/v2/: client_state.rs  consensus_state.rs  header.rs
solo-machine-core/src/ibc/client/ics07_tendermint/: client_state.rs  consensus_state.rs
solo-machine-core/src/ibc/core/: ics03_connection.rs  ics04_channel.rs  ics23_vector_commitments.rs  ics24_host.rs
solo-machine-core/src/ibc/core/ics02_client/: height.rs  msg_create_client.rs  msg_update_client.rs
solo-machine-core/src/ibc/core/ics03_connection/: msg_connection_open_ack.rs  msg_connection_open_init.rs
solo-machine-core/src/ibc/core/ics04_channel/: msg_acknowledgement.rs  msg_channel_close_init.rs  msg_channel_open_ack.rs  msg_channel_open_init.rs  msg_recv_packet.rs  packet.rs
solo-machine-core/src/ibc/core/ics24_host/: identifier.rs  path.rs
solo-machine-core/src/model/: chain.rs  ibc.rs  operation.rs
solo-machine-core/src/model/bank/: account.rs  account_operation.rs
solo-machine-core/src/model/chain/: chain.rs  chain_keys.rs
solo-machine-core/src/service/: bank_service.rs  chain_service.rs  ibc_service.rs
solo-machine-core/src/signer/: mnemonic.rs
solo-machine-server/: Cargo.toml
solo-machine-server/.solo-machine/: db  snap.00000000000012BF
solo-machine-server/proto/: chain.proto
solo-machine-server/src/: command.rs  crypto.rs  main.rs  service.rs
solo-machine-server/src/handler/: query_handler.rs
solo-machine-server/src/service/: chain.rs  ibc.rs
solo-machine/migrations/: 20210629091441_ibc_data.up.sql
solo-machine/proto/: bank.proto  chain.proto  ibc.proto
solo-machine/src/: bank_service.rs  command.rs  crypto.rs  event.rs  handler.rs  lib.rs  main.rs  model.rs  output.rs  server.rs  service.rs  signer.rs  transaction_builder.rs
solo-machine/src/command/: bank.rs  chain.rs  ibc.rs
solo-machine/src/event/: cli_event_handler.rs  env_logger.rs
solo-machine/src/handler/: msg_handler.rs  query_handler.rs
solo-machine/src/model/: bank.rs  ibc.rs
solo-machine/src/model/bank/: account.rs  account_operation.rs
solo-machine/src/server/: bank.rs  chain.rs  ibc.rs
solo-machine/src/service/: bank.rs  chain.rs  chain_service.rs  ibc.rs  ibc_service.rs
