[package]
name = "ibc"
version = "0.1.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
bech32 = "0.8.0"
cosmos-sdk-proto = "0.4.0"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
k256 = { version = "0.7.2", features = ["ecdsa", "sha256"] }
prost = "0.7.0"
prost-types = "0.7.0"
rand = "0.8.3"
regex = "1.4.5"
ripemd160 = "0.9.1"
sha2 = "0.9.3"
tonic = "0.4.1"

[build-dependencies]
tonic-build = "0.4.1"
