[package]
name = "ibc"
version = "0.1.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
bech32 = "0.8.1"
cosmos-sdk-proto = "0.5.0"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
k256 = { version = "0.9.3", features = ["ecdsa", "sha256"] }
prost = "0.7.0"
prost-types = "0.7.0"
rand = "0.8.4"
regex = "1.5.4"
ripemd160 = "0.9.1"
serde = "1.0.126"
sha2 = "0.9.5"
tendermint = "0.20.0"
tonic = "0.4.3"
urlencoding = "1.3.3"

[build-dependencies]
tonic-build = "0.4.2"
