[package]
name = "solo-machine-server"
version = "0.1.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
cosmos-sdk-proto = "0.5.0"
env_logger = "0.8.4"
hex = "0.4.3"
ibc = { path="../ibc" }
k256 = { version = "0.9.4", features = ["ecdsa", "sha256"] }
log = "0.4.14"
num-rational = { version = "0.4.0", features = ["serde"] }
prost = "0.7.0"
prost-types = "0.7.0"
rust_decimal = "1.14.3"
rust_decimal_macros = "1.14.3"
serde = "1.0.126"
serde_cbor = "0.11.1"
serde_json = "1.0.64"
sha2 = "0.9.5"
sled = "0.34.6"
structopt = "0.3.21"
tendermint = "0.20.0"
tendermint-light-client = "0.20.0"
tendermint-rpc = { version = "0.20.0", features = ["http-client"] }
time = "0.2.27"
tiny-bip39 = "0.8.0"
tiny-hderive = "0.3.0"
tokio = { version = "1.8.0", features = ["rt-multi-thread"] }
tonic = { version = "0.4.3", features = ["transport"] }

[build-dependencies]
prost-build = "0.7.0"
tonic-build = "0.4.2"
