[package]
name = "solo-machine"
version = "0.1.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
cli-table = { version = "0.4.7", default-features = false, features = [
    "derive",
] }
dotenv = "0.15.0"
env_logger = "0.9.0"
hex = "0.4.3"
humantime = "2.1.0"
k256 = { version = "0.11.0", features = ["ecdsa"] }
libloading = "0.7.3"
log = "0.4.17"
num-rational = "0.4.0"
primitive-types = "0.11.1"
prost = "0.9.0"
prost-types = "0.9.0"
rust_decimal = "1.23.1"
serde_json = "1.0.81"
solo-machine-core = { path = "../solo-machine-core", features = [
    "solomachine-v2",
] }
structopt = "0.3.26"
tendermint = "0.23.6"
termcolor = "1.1.3"
tokio = { version = "1.18.2", features = ["fs", "macros", "rt-multi-thread"] }
tonic = { version = "0.6.2", features = ["tls", "tls-roots"] }

[features]
default = []
ethermint = ["solo-machine-core/ethermint"]
postgres = ["solo-machine-core/postgres"]

[build-dependencies]
prost-build = "0.9.0"
tonic-build = "0.6.2"
