[package]
name = "solo-machine"
version = "0.1.3"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
cli-table = { version = "0.4.7", default-features = false, features = [
    "derive",
] }
dotenv = "0.15.0"
env_logger = "0.10.1"
hex = "0.4.3"
humantime = "2.1.0"
k256 = { version = "0.13.2", features = ["ecdsa"] }
libloading = "0.8.1"
log = "0.4.20"
num-rational = "0.4.1"
primitive-types = "0.12.2"
prost = "0.12.3"
prost-types = "0.12.3"
rust_decimal = "1.33.1"
serde_json = "1.0.111"
solo-machine-core = { path = "../solo-machine-core" }
structopt = "0.3.26"
tendermint = "0.34.0"
termcolor = "1.4.0"
tokio = { version = "1.35.1", features = ["fs", "macros", "rt-multi-thread"] }
tonic = { version = "0.10.2", features = ["tls", "tls-roots"] }

[features]
default = []
ethermint = ["solo-machine-core/ethermint"]
postgres = ["solo-machine-core/postgres"]

[build-dependencies]
prost-build = "0.12.3"
tonic-build = "0.10.2"
