[package]
name = "solo-machine"
version = "0.1.4"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.87"
cli-table = { version = "0.4.9", default-features = false, features = [
    "derive",
] }
dotenv = "0.15.0"
env_logger = "0.11.6"
hex = "0.4.3"
humantime = "2.1.0"
k256 = { version = "0.13.4", features = ["ecdsa"] }
libloading = "0.8.6"
log = "0.4.26"
num-rational = "0.4.2"
primitive-types = "0.13.1"
prost = "0.13.5"
prost-types = "0.13.5"
rust_decimal = "1.36.0"
serde_json = "1.0.140"
solo-machine-core = { path = "../solo-machine-core" }
structopt = "0.3.26"
tendermint = "0.40.1"
termcolor = "1.4.1"
tokio = { version = "1.44.0", features = ["fs", "macros", "rt-multi-thread"] }
tonic = { version = "0.12.3", features = ["tls", "tls-roots"] }

[features]
default = []
ethermint = ["solo-machine-core/ethermint"]
postgres = ["solo-machine-core/postgres"]

[build-dependencies]
prost-build = "0.13.5"
tonic-build = "0.12.3"
