[package]
name = "stdout-logger"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
anyhow = "1.0.42"
async-trait = "0.1.51"
solo-machine-core = { path = "../../solo-machine-core" }
