[package]
name = "stdout-logger"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
solo-machine-core = { path = "../../solo-machine-core" }
