[package]
name = "stdout-logger"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.87"
solo-machine-core = { path = "../../solo-machine-core" }
