[package]
name = "mnemonic-signer"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
bip32 = { version = "0.4.0", features = ["bip39"] }
k256 = { version = "0.11.0", features = ["ecdsa"] }
ripemd = "0.1.1"
sha2 = "0.10.2"
sha3 = { version = "0.10.1", optional = true }
solo-machine-core = { path = "../../solo-machine-core" }

[features]
default = []
ethermint = ["sha3", "solo-machine-core/ethermint"]
