[package]
name = "mnemonic-signer"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.87"
bip32 = { version = "0.5.3", features = ["bip39"] }
k256 = { version = "0.13.4", features = ["ecdsa"] }
ripemd = "0.1.3"
sha2 = "0.10.8"
sha3 = { version = "0.10.8", optional = true }
solo-machine-core = { path = "../../solo-machine-core" }

[features]
default = []
ethermint = ["sha3", "solo-machine-core/ethermint"]
